# snaac-interview-scheduler

./: .gitignore  README.md  TESTING.md  __init__.py  advanced_gui.py  advanced_scheduler.py  analyze_69_pdf.py  analyze_pdf_issue.py  analyze_pdf_structure.py  analyze_test5_structure.py  analyze_test7.py  check_marks.py  create_sample_pdf.py  debug_pdf_text.py  demo.py  detect_checkmarks.py  final_demo.py  final_fixed_parsing.py  final_parsing_fix.py  final_solution.py  find_missing_slots.py  fix_checkmark_parsing.py  fixed_36_parsing.py  fixed_parsing_logic.py  improved_pdf_gui.py  improved_pdf_processor.py  pdf_gui.py  pdf_processor.py  perfect_parsing.py  pyproject.toml  pytest.ini  quick_demo.py  requirements.txt  run_tests.py  schedule_matrix_gui.py  schedule_optimizer.py  simple_gui.py  start_gui.py  streamlit_app.py  team_editor_component.py  (+11 more)
core/: __init__.py  models.py  pdf_extractor.py  scheduler_engine.py
email_system/: __init__.py  email_validator.py  template_manager.py
excel/: __init__.py  excel_generator.py
gui/: __init__.py  main_interface.py
tests/: __init__.py  conftest.py  test_email_system.py  test_excel_generator.py  test_integration.py  test_models.py  test_pdf_extractor.py  test_scheduler_engine.py
