[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-scheduler"
version = "1.0.0"
description = "공모전 2차 면접 스케줄 자동 배치 시스템"
authors = [
    {name = "Interview Scheduler Team", email = "admin@interview-scheduler.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["interview", "scheduling", "optimization", "pdf", "excel"]

[project.urls]
Homepage = "https://github.com/interview-scheduler/interview-scheduler"
Documentation = "https://interview-scheduler.readthedocs.io/"
Repository = "https://github.com/interview-scheduler/interview-scheduler.git"
"Bug Tracker" = "https://github.com/interview-scheduler/interview-scheduler/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["interview_scheduler*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short --cov=interview_scheduler --cov-report=html --cov-report=term"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]